data/all_generated_tests/raw_wast_tests/br_if_UnreachableCodeExecution_1511.wast
;; 2. **Test 2 - Empty Operand Stack Before `br_if`**:    Create a code snippet where a `br_if` operation is executed with an empty operand stack, causing the operation to expect operand(s) that are not present. The wizard_engine should detect this and raise an `EmptyValueStackExpecting` error. This tests the constraint that requires operands to be present.

(assert_invalid
  (module
    (func $empty-operand-stack-expected
      (block
        (br_if 0)
      )
    )
  )
  "type mismatch"
)